RESOLVED FIXED157800
Fix the allinone-build on Linux in Source/WebCore/html/HTMLElementsAllInOne.cpp
https://bugs.webkit.org/show_bug.cgi?id=157800
Summary Fix the allinone-build on Linux in Source/WebCore/html/HTMLElementsAllInOne.cpp
Csaba Osztrogonác
Reported 2016-05-17 10:32:44 PDT
The allinone build is broken if HTMLCanvasElement.cpp is included in Source/WebCore/html/HTMLElementsAllInOne.cpp In file included from ../../Source/WebCore/html/HTMLCanvasElement.cpp:33:0, from ../../Source/WebCore/html/HTMLElementsAllInOne.cpp:47: ../../Source/WebCore/html/canvas/CanvasRenderingContext2D.h:131:15: error: anonymous scoped enum is not allowed In file included from ../../Source/WebCore/html/HTMLCanvasElement.cpp:33:0, from ../../Source/WebCore/html/HTMLElementsAllInOne.cpp:47: ../../Source/WebCore/html/canvas/CanvasRenderingContext2D.h:131:5: error: elaborated-type-specifier for a scoped enum must not use the 'class' keyword [-Werror] In file included from ../../Source/WebCore/html/HTMLCanvasElement.cpp:33:0, from ../../Source/WebCore/html/HTMLElementsAllInOne.cpp:47: ../../Source/WebCore/html/canvas/CanvasRenderingContext2D.h:131:15: error: expected identifier before numeric constant ../../Source/WebCore/html/canvas/CanvasRenderingContext2D.h:131:15: error: expected unqualified-id before numeric constant
Attachments
Patch (1.25 KB, patch)
2016-05-17 10:35 PDT, Csaba Osztrogonác
no flags
Csaba Osztrogonác
Comment 1 2016-05-17 10:35:04 PDT
Created attachment 279136 [details] Patch Removing HTMLCanvasElement.cpp from Source/WebCore/html/HTMLElementsAllInOne.cpp fixes the broken build. But maybe we can find better fix for it.
Csaba Osztrogonác
Comment 2 2016-05-18 01:54:37 PDT
Comment on attachment 279136 [details] Patch Let's land it as is, I don't have time to investigate magic build failures.
WebKit Commit Bot
Comment 3 2016-05-18 10:24:52 PDT
Comment on attachment 279136 [details] Patch Clearing flags on attachment: 279136 Committed r201084: <http://trac.webkit.org/changeset/201084>
WebKit Commit Bot
Comment 4 2016-05-18 10:24:57 PDT
All reviewed patches have been landed. Closing bug.
Ryan Haddad
Comment 5 2016-05-18 12:42:31 PDT
And it looks like this change broke the Apple Windows build :/ <https://build.webkit.org/builders/Apple%20Win%20Release%20%28Build%29/builds/77812>
Ryan Haddad
Comment 6 2016-05-18 13:45:38 PDT
(In reply to comment #4) > All reviewed patches have been landed. Closing bug. Well, I take that back. My first attempt at a clean build failed because the bot mangled its tools. Another bot successfully built after the clean <https://build.webkit.org/builders/Apple%20Win%20Debug%20%28Build%29/builds/94901> Sorry for the noise.
Note You need to log in before you can comment on or make changes to this bug.