Fix the allinone-build on Linux in Source/WebCore/html/HTMLElementsAllInOne.cpp https://bugs.webkit.org/show_bug.cgi?id=157800

Reviewed by Alex Christensen.

* html/HTMLElementsAllInOne.cpp:


Canonical link: https://commits.webkit.org/175965@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@201084 268f45cc-cd09-0410-ab3c-d52691b4dbfc